fixed typeahead wrapping bug

--- a/public/css/bootstrap-tagsinput-typeahead.css
+++ b/public/css/bootstrap-tagsinput-typeahead.css
@@ -42,7 +42,7 @@
     font-weight: normal;
     line-height: 1.428571429;
     color: #333333;
-    white-space: nowrap;
+    /*white-space: nowrap;*/
 }
 
 .tt-suggestion:hover,
